2011-08-03  Kentaro Hara  <haraken@google.com>

        Implement EventSender.scalePageBy()
        https://bugs.webkit.org/show_bug.cgi?id=58013

        Reviewed by Darin Fisher.

        Implemented EventSender.scalePageBy(f, x, y), which scales a page by a factor of f
        and then sets a scroll position to (x, y). Enabled the tests that had been waiting
        for the implementation of EventSender.scalePageBy(f, x, y).

        * platform/chromium-linux/compositing/scaling/tiled-layer-recursion-expected.png: Added.
        * platform/chromium-linux/fast/repaint/scale-page-shrink-expected.png: Added.
        * platform/chromium-linux/fast/repaint/scale-page-shrink-expected.txt: Added.
        * platform/chromium-mac/fast/dom/Element/scale-page-bounding-client-rect-expected.txt: Removed.
        * platform/chromium-mac/fast/dom/Range/scale-page-bounding-client-rect-expected.txt: Removed.
        * platform/chromium-win/fast/dom/Element/scale-page-bounding-client-rect-expected.txt: Removed.
        * platform/chromium-win/fast/dom/Element/scale-page-client-rects-expected.txt: Removed.
        * platform/chromium-win/fast/dom/Range/scale-page-bounding-client-rect-expected.txt: Removed.
        * platform/chromium-win/fast/dom/Range/scale-page-client-rects-expected.txt: Removed.
        * platform/chromium/test_expectations.txt: Enabled one test. Enabled two tests for chromium-linux.

2011-08-03  Ian Henderson  <ianh@apple.com>

        Draw rectangular box shadow for elements with border-radius if no corners are visible
        https://bugs.webkit.org/show_bug.cgi?id=65006

        Reviewed by Simon Fraser.

        * fast/box-shadow/box-shadow-clipped-slices.html: Added.
        * platform/mac/fast/box-shadow/box-shadow-clipped-slices-expected.png: Added.
        * platform/mac/fast/box-shadow/box-shadow-clipped-slices-expected.txt: Added.

2011-08-03  Noel Gordon  <noel.gordon@gmail.com>
