@@ -1,3 +1,14 @@
+2011-08-03  Alice Boxhall  <aboxhall@chromium.org>
+
+        An element with role=textbox should have settable AXValue unless read-only
+        https://bugs.webkit.org/show_bug.cgi?id=65664
+
+        Reviewed by Chris Fleizach.
+
+        * accessibility/AccessibilityRenderObject.cpp:
+        (WebCore::AccessibilityRenderObject::canSetValueAttribute):
+        Return true for non-native text field with aria-readonly not set.
+
 2011-08-03  Luke Macpherson   <macpherson@chromium.org>
 
         Clean up value clamping in CSSStyleSelector.
